k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtime-translate-system
  namespace: careerhack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realtime-translate-system
  template:
    metadata:
      labels:
        app: realtime-translate-system
    spec:
      containers:
      - name: realtime-translate-system
        image: jimmyhealer/realtime-translate-system:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: grp-secret
          mountPath: /app/grp-secret.json
          subPath: grp-secret.json
      volumes:
      - name: grp-secret
        secret:
          secretName: grp-secret
---
apiVersion: v1
kind: Service
metadata:
  name: realtime-translate-system-service
  namespace: careerhack
spec:
  selector:
    app: realtime-translate-system
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realtime-translate-system-ingress
  namespace: careerhack
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - careerhack.programing.tw
    secretName: careerhack-tls
  rules:
  - host: careerhack.programing.tw
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: realtime-translate-system-service
            port:
              number: 5000
